--- a/.github/workflows/grunt.yml
+++ b/.github/workflows/grunt.yml
@@ -9,6 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
     - name: Compile with Grunt
       uses: elstudio/actions-js-build/build@v2
